RESOLVED FIXED308818
[block-in-inline] Incorrect display box geometry on before/after lines for inline boxes
https://bugs.webkit.org/show_bug.cgi?id=308818
Summary [block-in-inline] Incorrect display box geometry on before/after lines for in...
alan
Reported 2026-02-27 06:13:32 PST
ssia
Attachments
Patch (5.79 KB, patch)
2026-02-27 06:21 PST, alan
no flags
Patch (11.51 KB, patch)
2026-02-27 09:51 PST, alan
no flags
Patch (14.54 KB, patch)
2026-02-27 11:29 PST, alan
no flags
[fast-cq]Patch (8.62 KB, patch)
2026-02-27 16:09 PST, alan
no flags
alan
Comment 1 2026-02-27 06:21:38 PST
alan
Comment 2 2026-02-27 09:51:10 PST
alan
Comment 3 2026-02-27 11:29:37 PST
alan
Comment 4 2026-02-27 16:09:03 PST
Created attachment 478520 [details] [fast-cq]Patch
EWS
Comment 5 2026-02-27 18:15:27 PST
Committed 308378@main (be6a8b57ed2a): <https://commits.webkit.org/308378@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478520 [details].
Radar WebKit Bug Importer
Comment 6 2026-02-27 18:16:11 PST
Note You need to log in before you can comment on or make changes to this bug.