[block-in-inline] Incorrect display box geometry on before/after lines for inline boxes https://bugs.webkit.org/show_bug.cgi?id=308818

Reviewed by Antti Koivisto.

We don't really need to do bidi handling for lines where there's no content at all (only empty <span>s). This is highly uncommon in normal inline layout case, but fairly common when block is
enclosed by an otherwise empty inline box e.g. <span><div></div></span>.

So let's special-case such non-contentful lines by just running the regular non-bidi display box
creation and move them over to their final (rtl) position.

Test: fast/inline/block-in-inline-rtl-geometry.html

* LayoutTests/fast/inline/block-in-inline-rtl-geometry-expected.html: Added.
* LayoutTests/fast/inline/block-in-inline-rtl-geometry.html: Added.
* LayoutTests/platform/glib/fast/dom/34176-expected.txt:
* LayoutTests/platform/ios/fast/dom/34176-expected.txt:
* LayoutTests/platform/mac/fast/dom/34176-expected.txt:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processBidiLinesWithNoContent):
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:

Canonical link: https://commits.webkit.org/308378@main